Fixed spacing with format document

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ body {
     padding: 20px;
 }
 
-.top-bar, .main-content {
+.top-bar,
+.main-content {
     display: flex;
     width: 100%;
     max-width: 1200px;
@@ -34,7 +35,10 @@ body {
     margin-bottom: 20px;
 }
 
-.title-navigation, .heading-text, .sidebar, #viz-specific-options {
+.title-navigation,
+.heading-text,
+.sidebar,
+#viz-specific-options {
     padding: 10px;
     border: 1px solid var(--primary-color);
     border-radius: 5px;
@@ -62,7 +66,8 @@ body {
     color: var(--hover-color);
 }
 
-.heading-text, .sidebar {
+.heading-text,
+.sidebar {
     box-sizing: border-box;
 }
 
@@ -83,7 +88,9 @@ body {
     text-align: center;
 }
 
-.sidebar select, .option select, .option input {
+.sidebar select,
+.option select,
+.option input {
     width: 100%;
     padding: 5px;
     font-size: 14px;
